# gipAndroid

./: CMakeLists.txt
java/dev/glist/android/: BaseGlistAppActivity.java
java/dev/glist/android/lib/: GlistNative.java
src/: gAndroidDialog.h  gAndroidUtil.cpp  gAndroidWindow.cpp  gAndroidWindow.h
tools/: GlistShaderToHeader-macos-universal
